--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div id="app">
-    <div class="header">Veloplus Helper</div>
+    <div class="header">Marketingtext Editor</div>
       <div class="blocks">
           <div>
              <span v-for="template, key in this.templates">
