Update index.html and templates.json

--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
               this.blocks.details.active = true;
               this.blocks.specs.active = false;
               this.blocks.inTheBox.active = false;
+              this.blocks.moreInfo.active = false;
               this.blocks.review.active = false;
               this.blocks.freestyle.active = false;
 
@@ -191,7 +192,8 @@
               this.blocks.details.active = true;
               this.blocks.specs.active = true;
               this.blocks.inTheBox.active = true;
-              this.blocks.review.active = true;
+              this.blocks.moreInfo.active = true;
+              this.blocks.review.active = false;
               this.blocks.freestyle.active = false;
 
           }
@@ -201,6 +203,7 @@
               this.blocks.review.active = false;
               this.blocks.specs.active = true;
               this.blocks.inTheBox.active = true;
+              this.blocks.moreInfo.active = false;
               this.blocks.freestyle.active = false;
 
           }
@@ -210,6 +213,7 @@
               this.blocks.review.active = false;
               this.blocks.specs.active = false;
               this.blocks.inTheBox.active = false;
+              this.blocks.moreInfo.active = false;
               this.blocks.freestyle.active = true;
           }
       }
