--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="header">Marketingtext Editor</div>
       <div class="blocks">
           <div>
+            <p>Templates</p>
              <span v-for="template, key in this.templates">
                 <button class="ui button templates toggle" @click="activateTemplate(key)">{{ template.name }}</button>
              </span>   
@@ -23,6 +24,7 @@
              </span>   
           </div>
           <div>
+            <p style="margin-top: 50px;">Text-Blöcke</p>
              <span v-for="block in this.blocks">
                 <button class="ui button blocks toggle" :class={active:block.active} @click="block.active = !block.active" v-html="block.name">{{ block.name }}</button>
              </span>   
@@ -63,7 +65,7 @@
       <div class="load-product">
         <span>Produktnummer Eingeben: </span>
         <input type="text" class="product-number-input" @keyup.enter="getCurrentText" v-model="productNumber" placeholder="e.g. 33001234">
-        <button class="load-text" @click="getCurrentText">Aktueller Text Laden [Enter]</button>
+        <button class="load-text" @click="getCurrentText">Aktuellen Text Laden [Enter]</button>
       </div>
       <div class="current">
         <h2>{{ currentProduct }}</h2>
@@ -89,6 +91,24 @@
         </div>
       </div>
     </div>
+    <div id="explanation">
+      <h2>Vorgaben und Erklärungen</h2>
+      <h3>Allgemeine Vorgaben zu Sprache und Stil</h3>
+      <p>
+        <ul>
+          <li>Am allerwichtigsten: Sich immer in die Situation der Kunden versetzen. Welche Informationen sind für den Kaufentscheid relevant? Was interessiert die Kunden an diesem Produkt mit Bezug zum Velo? Welche Informationen inspirieren die Kunden?</li>
+<li>Texte möglichst kurz halten, indem auf unnötige Füllwörter verzichtet wird. Leute wollen nicht viel Fliesstext lesen.</li>
+<li>Keine Lieferantentexte 1:1 kopieren! Unsere Texte sollen für die Suchmaschinenoptimierung einzigartig sein. Die Lieferantentexte sollen als Ausgangslage verwendet werden, müssen aber stark verändert werden. Ausnahme bei unwichtigen, kleinen Ersatzteilen.</li>
+<li>Wenn man das Produkt selber getestet hat (oder internes Testfeedback hat), dann gerne auch die Erfahrung davon mit einfliessen lassen. Leser:in soll erkennen, dass das Produkt von Veloplus getestet wurde.</li>
+<li>Keine direkte Ansprache der Kunden (“Sie können diesen Helm verwenden für…”) im Text sondern neutrale Formulierungen verwenden</li>
+<li>Regeln zur Texterstellung werden von den Handbuch-Vorgaben übernommen (Abkürzungen, Kopplungen etc.)</li>
+<br/>
+<li><strong>Ergänzung für Eigenprodukte:</strong> Mehr Bilder, auführlichere Textbeschriebe, Entstehungsgeschickte, Verweis zu Videos, etc.</li>
+        </ul>
+      </p>
+      <h3>Weiterführende Vorgaben und Anleitung im Detail</h3>
+      <p><a target="_blank" href="https://drive.google.com/file/d/1ju-4vuKDtBkI3WSi16OJmzE_DWVpGfpM/view?usp=sharing">Dokument Vorgaben Texte Produkterfassung</a></p>
+    </div>  
 
   <script type="module">
     import tinyconfig_json from "./tinymce_config.json" assert { type: 'json' };
@@ -109,7 +129,7 @@
         templates: {
             basic: { name: 'Basic' },
             advanced: { name: 'Erweitert' },
-            vpBrand: { name: 'Veloplus Eigenprodukte' },
+            //advancedSample: { name: 'Erweitert Beispiel' },
             freestyle: { name: 'Freestyle' }
         },
         blocks: JSON.parse(JSON.stringify(templates_json)),
@@ -183,7 +203,6 @@
               this.blocks.specs.active = false;
               this.blocks.inTheBox.active = false;
               this.blocks.moreInfo.active = false;
-              this.blocks.review.active = false;
               this.blocks.freestyle.active = false;
 
           }
@@ -193,17 +212,15 @@
               this.blocks.specs.active = true;
               this.blocks.inTheBox.active = true;
               this.blocks.moreInfo.active = true;
-              this.blocks.review.active = false;
               this.blocks.freestyle.active = false;
 
           }
-          if(template == 'vpBrand') {
-              this.blocks.nutshell.active = false;
-              this.blocks.details.active = true;
-              this.blocks.review.active = false;
-              this.blocks.specs.active = true;
-              this.blocks.inTheBox.active = true;
-              this.blocks.moreInfo.active = false;
+          if(template == 'advancedSample') {
+              this.blocks.nutshellSamle.active = true;
+              this.blocks.detailsSample.active = true;
+              this.blocks.specsSample.active = true;
+              this.blocks.inTheBoxSample.active = true;
+              this.blocks.moreInfoSample.active = true;
               this.blocks.freestyle.active = false;
 
           }
