--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         productNumber: '',
         product: { number: '', description: ''},
         templates: {
-            basic: { name: 'Basic' },
-            advanced: { name: 'Erweitert' },
+            advanced: { name: 'Vollständig' },
+            basic: { name: 'Einfach' },
             //advancedSample: { name: 'Erweitert Beispiel' },
-            freestyle: { name: 'Freestyle' }
+            freestyle: { name: 'Freier Text' }
         },
         blocks: JSON.parse(JSON.stringify(templates_json)),
         savedItems: '',
