--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div id="explanation">
-      <h2>Vorgaben und Erklärungen...</h2>
+      <h2>Vorgaben und Erklärungen</h2>
       <h3>Allgemeine Vorgaben zu Sprache und Stil</h3>
       <p>
         <ul>
