--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
               ]
             }
           },
+            formats: {
+            removeformat: [
+              // Configures `clear formatting` to remove specified elements regardless of its attributes
+              { selector: 'h2,h3,b,strong,em,i,font,u,strike,s', remove: 'all' },
+            ]
+          }
           currentText: '',
           currentProduct: '',
           productNumber: '',
