changed url to embedshop

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
           method: 'GET',
           headers: {
               'Accept': 'application/json',
-              Authorization: `Bearer ${api_key}`
+              'Authorization': `Bearer ${api_key}`
           }
       })
       .then(response => response.json())
